// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.S checkGrammar=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkGrammar=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S className="my-classname" 1`] = `
<s
  className="uu5-bricks-s my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S content="This is Content from ContentMixin" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</s>
`;

exports[`UU5.Bricks.S content=12345 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</s>
`;

exports[`UU5.Bricks.S controlled=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S controlled=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S default props 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S disabled=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S disabled=true 1`] = `
<s
  className="uu5-bricks-s uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</s>
`;

exports[`UU5.Bricks.S docKit examples UU5.Bricks.S should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    content="This is normal text"
    id="uuID02"
    key="uuID02"
  />
  <P
    id="uuID03"
    key="uuID03"
  >
    This is 
    <S
      id="uuID04"
    >
      striked
    </S>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.S dynamic=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S dynamic=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden=true 1`] = `
<s
  className="uu5-bricks-s uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S id="myId" 1`] = `
<s
  className="uu5-bricks-s"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S mainAttrs=undefined 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S name="myName" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex=true 1`] = `
<s
  className="uu5-bricks-s uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected=true 1`] = `
<s
  className="uu5-bricks-s uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S style="padding:8px; borderRadius: 2px" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S style={"backgroundColor":"red","color":"blue"} 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S tooltip="My Tooltip" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
